...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#c4dfe6"
    tools:context=".MessageActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/barLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            android:background="@color/colorPrimaryDark"
            android:theme="@style/Base.ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/MenuStyle">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="30dp"
...

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerViewMessages"
        android:layout_below="@+id/barLayout"
        android:layout_above="@id/bottom"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bottom"
        android:background="#fff"
...
            android:background="@drawable/ic_action_uploadimg"
            android:layout_marginLeft="3dp"
            android:layout_alignParentLeft="true"
            />

        <EditText
            android:id="@+id/txtSend"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/btnSend"

            android:layout_toRightOf="@id/uploadImgg"
            android:layout_marginLeft="5dp"

            android:background="@android:color/transparent"
            android:hint="Type a Message..."
...
