...
            android:src="@mipmap/login_logo"/>

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_below="@id/logoSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:met_floatingLabel="normal"
            android:hint="Email" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:layout_below="@id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pass"
            android:inputType="textPassword"
            android:layout_marginTop="10dp"
            app:met_floatingLabel="normal"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="Password" />

        <Button
            android:layout_below="@id/pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnLogin"
            android:text="Login"
            android:textColor="#fff"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/mybutton"
            />
...
