...

    tools:context=".Fragments.ChatsFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/recyclerViewChats"/>

</RelativeLayout>
